--- a/zerodha.css
+++ b/zerodha.css
@@ -45,11 +45,12 @@ div ul li {
     font-size: .9em;
 }
 
-#navbar-menu {
+.hamburger-icon {
     color: #666;
     font-weight: 400;
     display: inline-block;
-    padding: 20px 0;
+    /* padding: 20px 0; */
+    cursor: pointer;
 }
 
 
@@ -88,4 +89,5 @@ main button {
     border: none;
     border-radius: 2px;
     font-size: 1.3em;
+    cursor: pointer;
 }
