--- a/zerodha.css
+++ b/zerodha.css
@@ -15,6 +15,9 @@ body {
 header {
     background-color: white;
     box-shadow: 0px 0px 2px #6666;
+    /* Fixed nav at top */
+    position: sticky;
+    top: 0;
 }
 
 .heading {
@@ -55,7 +58,7 @@ div ul li {
 
 
 main {
-    padding: 108px 0px 108px 0px;
+    padding: 100px 0px 100px 0px;
     display: flex;
     flex-direction: column;
     gap: 2em;
@@ -64,8 +67,8 @@ main {
 }
 
 .head-img {
-    width: 1181px;
-    height: 497px;
+    width: 618px;
+    height: 260px;
 }
 
 img {
@@ -76,12 +79,19 @@ img {
 
 main h1 {
     color: #424242;
+    /* font: 44px; */
+    font-weight: lighter;
+    font-size: 2.75rem;
+    line-height: 1.25;
 }
 
 main p {
-    font-size: 1.3em;
     text-align: center;
     color: #424242;
+    margin: 0px 0px 8px;
+    font-size: 1.25rem;
+    font-weight: 400;
+    ;
 }
 
 main button {
