--- a/zerodha.css
+++ b/zerodha.css
@@ -42,18 +42,23 @@ div ul {
 }
 
 div ul li {
-    color: rgba(0, 0, 0, 0.438);
-    letter-spacing: 0px;
-    font-weight: 600;
-    font-size: .9em;
+    color: #666;
+    font: 14.4px;
+    font-weight: 400;
+    font-size: .9rem;
+    transition: color .3s;
+    display: inline-block;
+    box-sizing: border-box;
 }
 
 .hamburger-icon {
     color: #666;
     font-weight: 400;
     display: inline-block;
-    /* padding: 20px 0; */
     cursor: pointer;
+    font-size: 16px;
+    /* padding: 20px 0; */
+    /* display: inline-block; */
 }
 
 
